--- a/loginsys/templates/loginsys/register.html
+++ b/loginsys/templates/loginsys/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Регистрация</title>
 </head>
 <body>
     <form action="/auth/register" method="post">
