--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -1,17 +1,17 @@
 <html>
 {% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static 'mainapp/css/audio.css' %}" />
+<link id="playerCSS" rel="stylesheet" type="text/css" href="{% static 'mainapp/css/audioSmall.css' %}" />
 <head>
 <title>{{track_name}}</title>
 <script src="{% static 'mainapp/js/jquery-3.3.1.js' %}"></script>
 <script src="{% static 'mainapp/js/audio.js' %}"></script>
 </head>
 <body>
-
+{% csrf_token %}
 <div id="topbar">
     <a id="sitename" href="/">NubasMusicTopKodingProMegaSite</a>
     {% if username %}
-    <a class ="login" id="mymusic" href="performers/">Моя музыка</a>
+    <a class ="login" id="mymusic" href="performers/" style="right: 220px; top: 15px;">Моя музыка</a>
     <a class ="login" id="logout" href="auth/logout/">Выйти ({{ username }})</a>
     {% else %}
     <a class ="login" id="login" href="auth/login/">Войти</a>
@@ -20,37 +20,49 @@
 
 <div id="player">
     <div class="Player" id="playerBackground"></div>
-    <div id="playerContainer">
-        <div class="Button Player" id="mainlogo">
 
-            <img class="Button Player" id="logo" src="{% static logo_link %}" draggable="false" />
+    <div id="playerContainer">
+        <div class="Button" id="mainlogo">
+
+            <img id="logo" src="{% static logo_link %}" draggable="false"/>
 
             <img id="like" src="{% static 'mainapp/images/like.png' %}" draggable="false"/>
-            <div id="progressBar"></div>
+            <!--<div id="progressBar"></div>-->
         </div>
 
-        <h1 class="Player" id="trackname">{{performer_name}} - {{track_name}} </h1>
+
+
+        <p id="trackname">{{track_name}}</p>
+        <p id="performername">{{performer_name}}</p>
 
         <img class="Player" id="maintoprevlogo" src="{% static logo_link %}" draggable="false" />
 
-        <img class="Player" id="prevlogo" src="{% static logo_link %}" draggable="false" />
+        <img class="Player" id="prevlogo" draggable="false" />
 
         <img class="Player" id="nextlogo" src="{% static nextlogo_link %}" draggable="false" />
 
         <audio id="audio" src="{% static file_link %}"></audio>
 
-        <img class="Button Player" id="playButton" src="{% static 'mainapp/images/playButton.png' %}" draggable="false" />
-        <img class="Button Player" id="nextButton" src="{% static 'mainapp/images/nextButton.png' %}"  draggable="false"/>
+        <img class="Button" id="playButton" src="{% static 'mainapp/images/playButton.png' %}" draggable="false" />
+        <img class="Button" id="nextButton" src="{% static 'mainapp/images/nextButton.png' %}"  draggable="false"/>
         <img class="Button Player" id="previousButton" src="{% static 'mainapp/images/previousButton.png' %}" draggable="false" />
 
-        <div class="Player" id="volume">
+        <div id="volume">
             <img class="Player Button" id="speaker" src="{% static 'mainapp/images/speaker100.png' %}" draggable="false"/>
-            <div class="Player" id="draggingZone"></div>
-            <img class="Player Button" id = "ball" src="{% static 'mainapp/images/circle.png' %}" draggable="false"/>
-            <div class="Player" id="line"></div>
+            <div class="Player Button" id="draggingZone"></div>
+            <img class="Button" id = "ball" src="{% static 'mainapp/images/circle.png' %}" draggable="false"/>
+            <div class="Player Button" id="line"></div>
             <div id="fillingLine"></div>
         </div>
     </div>
+    <img class="Button" id="dropdown" src="{% static 'mainapp/images/dropdown.png' %}" draggable="false" />
+    <div class="Player Button" id ="progress">
+        <p id="playedTime">0:00</p>
+        <p id="trackLength"></p>
+        <div class="Player Button" id="progressLine"></div>
+        <div id="progressBarLine"></div>
+    </div>
 </div>
+
 </body>
 </html>
