--- a/loginsys/templates/loginsys/register.html
+++ b/loginsys/templates/loginsys/register.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
+    {% load staticfiles %}
+    <link id="playerCSS" rel="stylesheet" type="text/css" href="{% static 'loginsys/css/registr.css' %}" />
 </head>
 <body>
     <form action="/auth/register" method="post">
         {% csrf_token %}
-        {{ form }}
-         <input class="button" type="submit" value="Зарегистрироваться">
+        <div class="form">
+            <label>BoysBand</label>
+            <br>
+            <input type="text" name="username" placeholder="Имя пользователя">
+            <input type="email" name="email" placeholder="Эл. почта">
+            <input type="password" name="password1" placeholder="Пароль">
+            <input type="password" name="password2" placeholder="Повторите пароль">
+            <input class="button" type="submit" name="register" value="Зарегистрироваться">
+            <span>Войти через</span>
+            <hr>
+            <input type="submit" name="vk" value="Вконтакте">
+        </div>
     </form>
 </body>
 </html>
