--- a/mainapp/static/mainapp/css/audioFull.css
+++ b/mainapp/static/mainapp/css/audioFull.css
@@ -110,9 +110,9 @@ a {
 
 
 }
-#mainlogo:hover {
+/*#mainlogo:hover {
 	box-shadow: 1px 5px 28px #ff3079;
-}
+}*/
 
 #nextlogo {
 	top: -50%;
@@ -197,15 +197,59 @@ a {
 #like {
     z-index: 5;
     opacity: 0.8;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
     width: 40%;
     height: 40%;
-    position: inherit;
     visibility: hidden;
+}
+
+#menu {
+    z-index: 5;
+    width: 40px;
+    height: 40px;
+    right: 0;
+    left: -110%;
+    top: 0;
+    bottom: -10%;
+    margin: auto;
+	position: absolute;
+}
+
+#menuPic {
+    width: 100%;
+    height: 100%;
+}
+
+#menuDropdown {
+    position: absolute;
+    top: 100%;
+    left: -100px;
+    width: 160px;
+    z-index: 100;
+    /*-webkit-transition: 0.5s ease-in-out;
+    -moz-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;*/
+    list-style: none;
+    padding: 0;
+    background: #323232;
+    display: none;
+
+}
+
+li {
+    display: inline-block;
+    width: 100%;
+}
+
+li:hover {
+    background: #252525;
+}
+
+.menuElements {
+    font: 15px Arial,Helvetica,sans-serif;
+	color: #e8e8e8;
+	text-align: center;
+    padding: 0 10px 0 10px;
 }
 
 #progressBar {
