--- a/loginsys/static/loginsys/css/registr.css
+++ b/loginsys/static/loginsys/css/registr.css
@@ -4,7 +4,8 @@ html, body
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: #fffff0;
+    background: url(photo-1453120566849-be97281a59ae.jpg)no-repeat center center fixed;
+    background-size: cover;
 }
 label
 {
@@ -33,7 +34,7 @@ form input
 form input[name="register"]
 {
     padding: 15px 0 30px 0;
-    margin: 5px 0 20px 0;
+    margin: 15px 0 20px 0;
     font-size: 15px;
     border: none;
     cursor: pointer;
