--- a/mainapp/static/mainapp/css/audio.css
+++ b/mainapp/static/mainapp/css/audio.css
@@ -20,11 +20,7 @@
 
 }
 
-body {
-    background-color: #5e5e5e;
-}
-
-a {
+/*a {
     text-decoration: none;
     font: 20px Arial,Helvetica,sans-serif;
     color: #e8e8e8;
@@ -33,7 +29,7 @@ a {
     position: inherit;
     opacity: 1.0;
     vertical-align: center;
-}
+}*/
 
 .login {
     right: 30px;
@@ -77,6 +73,7 @@ a {
 #menuPic {
     width: 100%;
     height: 100%;
+    padding: initial;
 }
 
 #menuDropdown {
@@ -116,6 +113,7 @@ li:hover {
     width: 30px;
     height: 30px;
     left: -160%;
+    padding: 0;
 }
 
 #ball {
@@ -127,6 +125,7 @@ li:hover {
     width: 20px;
     height: 20px;
     z-index: 10;
+    visibility: hidden;
 }
 #line {
     background-color: #575757;
@@ -134,6 +133,7 @@ li:hover {
     height: 10px;
     border-radius: 15px;
     z-index: 0;
+    visibility: hidden;
 }
 
 #fillingLine {
@@ -147,6 +147,7 @@ li:hover {
     z-index: 5;
     margin: auto;
 	position: absolute;
+	visibility: hidden;
 }
 
 #draggingZone {
@@ -158,17 +159,17 @@ li:hover {
 #dropdown {
     margin: auto;
 	position: absolute;
-
     width: 30px;
     height: 30px;
-    top: 20px;
-    right: 50px;
+    right: 5px;
+    top: 0;
+    bottom: 10px;
 }
 
 #progress {
     height: 10px;
     width: 100%;
-    top: 100%;
+    top: 59px;
 }
 #progressLine {
     height: 100%;
