--- a/mainapp/static/mainapp/css/audio.css
+++ b/mainapp/static/mainapp/css/audio.css
@@ -53,7 +53,7 @@
 
 #playerBackground {
     width: auto;
-    background-color: #3b3b3b;
+    /*background-color: rgba(255, 254, 255, 0.98);/* #3b3b3b;*/
     position: absolute;
 }
 
