--- a/mainapp/static/mainapp/css/audioSmall.css
+++ b/mainapp/static/mainapp/css/audioSmall.css
@@ -88,7 +88,7 @@
 }
 #trackname {
 	font: 20px Arial,Helvetica,sans-serif;
-	color: #e8e8e8;
+	color: rgb(0, 0, 0);/* #e8e8e8;*/
 	text-align: right;
 	width: 60%;
 	height: 30px;
