--- a/mainapp/static/mainapp/css/main.css
+++ b/mainapp/static/mainapp/css/main.css
@@ -5,6 +5,7 @@ html, body
     width: 100%;
     margin: 0;
     padding: 0;
+    font-family: Arial,Helvetica,sans-serif;
 }
 .header
 {
@@ -25,11 +26,12 @@ html, body
     display: block;
     padding: 0 5px;
     height: 69px;
-    flex-basis: 260px;
+    flex-basis: 280px;
     text-align:center;
 }
 .name
 {
+    font: Arial,Helvetica,sans-serif;
     font-size: 375%;
     width: 23.915%;
 }
@@ -61,7 +63,6 @@ html, body
 /*панель топов*/
 .topics
 {
-    
     background-color: rgb(102, 102, 102);
     top: 0px;
     left: 0px;
@@ -222,7 +223,7 @@ img /*обложка лучшей композиции*/
     cursor: pointer;
     background-color: rgba(192,192,192,0.8);
     border-bottom: 2px solid currentColor;
-    line-height: 1;
+    line-height: 1.5;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 /*подборка*/
